Fix button spacing on devices with very low width

--- a/static/global.css
+++ b/static/global.css
@@ -31,6 +31,7 @@ button {
   border: none;
   border-radius: 8px;
   padding: 0.75rem;
+  margin: 0.25rem 0.25rem;
 }
 
 h1, h2 {
